kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grocery-app
  labels:
    name: grocery-app
    environment: production
