kubernetes/06-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: grocery-app
  labels:
    app: backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
